@@ -8,5 +8,17 @@
   "item.morevanillashields.emerald_shield": "Emerald Shield",
   "item.morevanillashields.amethyst_shield": "Amethyst Shield",
   "item.morevanillashields.end_crystal_shield": "End Crystal Shield",
-  "item.morevanillashields.obsidian_shield": "Obsidian Shield"
+  "item.morevanillashields.obsidian_shield": "Obsidian Shield",
+  "item.morevanillashields.coal_shield": "Coal Shield",
+
+  "item.moditems.shift": "Press \"SHIFT\" for more Info",
+  "item.moditems.leather_shield": "Leather Shield. Durability is 216",
+  "item.moditems.gold_shield": "Gold Shield. Durability is 356",
+  "item.moditems.diamond_shield": "Diamond Shield. Durability is 512",
+  "item.moditems.netherite_shield": "Netherite Shield. Durability is 2042",
+  "item.moditems.emerald_shield": "Emerald Shield. Durability is 512",
+  "item.moditems.amethyst_shield": "Amethyst Shield. Durability is 432",
+  "item.moditems.end_crystal_shield": "End Crystal Shield. Durability is 750",
+  "item.moditems.obsidian_shield": "Obsidian Shield. Durability is 610",
+  "item.moditems.coal_shield": "Coal Shield. Durability is 268"
 }
