@@ -1,0 +1,34 @@
+{
+  "gui_light": "front",
+  "texture_size": [64, 64],
+  "textures": {
+    "0": "morevanillashields:item/coal_shield",
+    "particle": "morevanillashields:item/coal_shield"
+  },
+  "elements": [
+    {
+      "from": [-6, -11, 1],
+      "to": [6, 11, 2],
+      "faces": {
+        "north": {"uv": [3.5, 0.25, 6.5, 5.75], "texture": "#0"},
+        "east": {"uv": [3.25, 0.25, 3.5, 5.75], "texture": "#0"},
+        "south": {"uv": [0.25, 0.25, 3.25, 5.75], "texture": "#0"},
+        "west": {"uv": [0, 0.25, 0.25, 5.75], "texture": "#0"},
+        "up": {"uv": [0.25, 0, 3.25, 0.25], "texture": "#0"},
+        "down": {"uv": [3.25, 0, 6.25, 0.25], "texture": "#0"}
+      }
+    },
+    {
+      "from": [-1, -3, -5],
+      "to": [1, 3, 1],
+      "faces": {
+        "north": {"uv": [10, 1.5, 10.5, 3], "texture": "#0"},
+        "east": {"uv": [8.5, 1.5, 10, 3], "texture": "#0"},
+        "south": {"uv": [8, 1.5, 8.5, 3], "texture": "#0"},
+        "west": {"uv": [6.5, 1.5, 8, 3], "texture": "#0"},
+        "up": {"uv": [8, 0, 8.5, 1.5], "texture": "#0"},
+        "down": {"uv": [8.5, 1.5, 9, 0], "texture": "#0"}
+      }
+    }
+  ]
+}
