@@ -34,3 +34,6 @@ Changelog 1.0.0-1.20.4:
 Changelog 1.0.1-1.20.4:
 
 - Updated to forge - 49.0.9
+- Added Coal Shield (smeltable)
+- Simplified code of End Crystal Shield
+- Added Tool Tips for Shields
